# mutslices

./: Cargo.toml  README.md
src/: lib.rs
tests/: test_mutslices.rs
tests/ui/: test_ui_move_vec.rs  test_ui_move_vec.stderr
